# DigitCloth

./: .gitignore  connect_digit.py  connect_gsmini.py  delaunay_test.py  detect_blob.py  detect_deform.py  detect_edge.py  detect_edges.py  detect_markers.py  digit_device.py  digit_main.py  digit_markers.py  digit_markers_opticalflow.py  digit_odometer.py  edge_msg.py  fix_blob.py  genetic_calc.py  global_params.py  interp_blob.py  linear_regression.py  of_test.py  other_test.py  record_digit.py  ros_comms.py  show_cpd.py  teaserpp_test.py  test.py  test_yolo.py  track_deform.py  track_markers.py
experiments/: plot.ipynb
experiments/data/: T_log_exp_odometer_20230523-220224.npy  T_log_exp_odometer_20230523-220951.npy  T_log_exp_odometer_20230523-221417.npy  T_log_exp_odometer_20230523-222147.npy  T_log_exp_odometer_20230523-222819.npy  X_log_exp_odometer_20230523_220224.csv  X_log_exp_odometer_20230523_220951.csv  X_log_exp_odometer_20230523_221417.csv  X_log_exp_odometer_20230523_222147.csv  X_log_exp_odometer_20230523_222819.csv
keypoints/: keypoints_001.txt
markers/: Markers-220705.ai  Markers-220708.ai  Markers-220710.ai  Markers-220713.ai  Markers-220713.dxf  Markers-220726.ai  Markers-220726.dxf  Markers-230410.dwg  Markers-230410.dxf  Markers-230412.dwg  Markers-230412.dxf
ros_workspace/src/auto_control/: CMakeLists.txt  package.xml
ros_workspace/src/auto_control/backfile/: main.cpp  test.cpp  test_main.cpp
ros_workspace/src/auto_control/src/: main.cpp
ros_workspace/src/control_hd/: CMakeLists.txt  package.xml
ros_workspace/src/control_hd/include/control_hd/: auto_clothmanipulation.h
ros_workspace/src/control_hd/src/: AutoMoveSingleCloth.cpp  auto_clothmanipulation.cpp  kukaservo_lib.cpp
ros_workspace/src/control_hd/src/backfile/: cloth_manipulate.cpp  test_kuka.cpp
ros_workspace/src/digitcloth/: CMakeLists.txt  exp.launch  package.xml
ros_workspace/src/digitcloth/include/digitcloth/: cloth_manipulate.h  move_cloth.h
ros_workspace/src/digitcloth/msg/: Edge_msg.msg
ros_workspace/src/digitcloth/scripts/: ros_pub.py
ros_workspace/src/digitcloth/src/: cloth_manipulate.cpp  main.cpp  move_cloth.cpp
ros_workspace/src/fingerTip_image/: CMakeLists.txt  package.xml
ros_workspace/src/fingerTip_image/msg/: clothEdge.msg
ros_workspace/src/fingerTip_image/scripts/: Detect_cloth.py  DynamicOpticalFlow.py  Edge_detect.py  detect_clothPos.py  new_cameraView.py  new_detectEdge.py  opticalFlow.py  opticalFlowNew.py
ros_workspace/src/get_height/: CMakeLists.txt  package.xml
ros_workspace/src/get_height/msg/: Height.msg  Odometer.msg  Odometer_result.msg
ros_workspace/src/get_height/scripts/: Ldigit_get_height.py  Rdigit_get_height.py  ToDepth_v.py  gs_get_height.py  img_to_depth_digit.py  main_get_height.py  new_get_height.py
ros_workspace/src/hd_servo/: CMakeLists.txt
ros_workspace/src/hd_servo/data/: cmd_angle  real_path_data  theory_path_data
ros_workspace/src/hd_servo/include/hd_servo/: INST.h  hd_drive.h  hd_kinematics.h  matrix.h
ros_workspace/src/hd_servo/msg/: FingerTip_offset.msg  JointSpeed.msg
ros_workspace/src/hd_servo/src/: SCS.cpp  SCSerial.cpp  calc_pathInterpolation.cpp  hd_drive.cpp  main.cpp  time.cpp
ros_workspace/src/kukafri_servo-master/: CMakeLists.txt  README.md  log.pptx  package.xml
ros_workspace/src/kukafri_servo-master/config/: camerahxz.yaml  cameralsy.yaml  homejoints.yaml
ros_workspace/src/kukafri_servo-master/include/kukafri_hw/: FRIException.h  MyLBRClient.h  calc_pathInterpolation.h  friClientApplication.h  friClientIf.h  friConnectionIf.h  friLBRClient.h  friLBRCommand.h  friLBRState.h  friTransformationClient.h  friUdpConnection.h  gazebo_sim.h  kuka_kinematics.h  kuka_ros.h  matrix.h  system_time.h
ros_workspace/src/kukafri_servo-master/launch/: kukafri_hw.launch
ros_workspace/src/kukafri_servo-master/msg/: kukaCmdPos.msg  kukaCmdPosE.msg  kukaCmdPosEOffset.msg  kukaCmdPosQ.msg  kukaJoint.msg  kukaState.msg
ros_workspace/src/kukafri_servo-master/src/: MyLBRApp.cpp  MyLBRClient.cpp  calc_pathInterpolation.cpp  gazebo_sim.cpp  kuka_kinematics.cpp  kuka_ros.cpp  matrix_func.cpp  time.cpp
ros_workspace/src/kukafri_servo-master/srv/: moveToHome.srv  setMoveMode.srv
ros_workspace/src/test_hd/: CMakeLists.txt
ros_workspace/src/test_hd/backfile/: test_Optical_flow.cpp  test_assembly.cpp
ros_workspace/src/test_hd/include/test_hd/: cloth_manipulate.h
ros_workspace/src/test_hd/src/: cloth_manipulate.cpp  test_4_19.cpp  test_4_26.cpp  test_MoveSingleCloth.cpp  test_layer.cpp
saved/data/: saved_X.out  saved_Y.out
saved/video/: clothMovement_0.webm  clothMovement_1.webm
servo/hd_servo/: CMakeLists.txt  package.xml
servo/hd_servo/data/: calc_path_data
servo/hd_servo/include/hd_servo/: INST.h  SCS.h  SCSCL.h  SCSerial.h  SMSBL.h  SMSCL.h  calc_pathInterpolation.h  hd_drive.h  hd_kinematics.h  system_time.h
servo/hd_servo/src/: SCS.cpp  SCSCL.cpp  SCSerial.cpp  SMSBL.cpp  SMSCL.cpp  calc_pathInterpolation.cpp  hd_drive.cpp  hd_kinematics.cpp  matrix_func.cpp  time.cpp
servo/hd_servo/srv/: max_load.srv
servo/src/hd_servo/include/hd_servo/: SCS.h  calc_pathInterpolation.h
servo/src/hd_servo/msg/: EndPos.msg  motor_feedback.msg
servo/src/hd_servo/src/: SMSBL.cpp  SMSCL.cpp  hd_drive.cpp  hd_kinematics.cpp  main.cpp
servo/src/test_hd/: package.xml
servo/src/test_hd/backfile/: test_assembly.cpp
servo/src/test_hd/include/test_hd/: cloth_manipulate.h  kukaservo_lib.h
servo/src/test_hd/src/: test_TwoCloth.cpp
servo/test_hd/src/: main.cpp  test_MoveSingleCloth.cpp
